# fastapi-amis-admin-cli

./: .gitignore  README.md  pyproject.toml
fastapi_amis_admin_cli/: __init__.py  main.py
fastapi_amis_admin_cli/App/: cookiecutter.json
fastapi_amis_admin_cli/App/{{cookiecutter.slug}}/: __init__.py  admin.py  apis.py  events.py  jobs.py  models.py
fastapi_amis_admin_cli/Project/: cookiecutter.json
fastapi_amis_admin_cli/Project/{{cookiecutter.slug}}/: README.md  docker-compose.yml  pyproject.toml
fastapi_amis_admin_cli/Project/{{cookiecutter.slug}}/backend/: .env  main.py  requirements.txt
fastapi_amis_admin_cli/Project/{{cookiecutter.slug}}/backend/core/: adminsite.py  globals.py  settings.py
fastapi_amis_admin_cli/Project/{{cookiecutter.slug}}/scripts/: run.sh
fastapi_amis_admin_cli/commands/: main.py  project.py  utils.py
