[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "{{ cookiecutter.name }}"
version = "2023.9.15"
requires-python = ">=3.8"
authors = [
    { email = "1456417373@qq.com" },
    { name = "Atomi" }
]
dependencies = [
    "uvicorn>=0.18.3",
    "pydantic[dotenv]>=1.9.0",
    "aiosqlite>=0.15.0",
    "fastapi-amis-admin[cli]>=0.6.5",
    "sqlmodel>=0.0.14",
    "alembic>=1.7.6",
    {% if cookiecutter.use_user_auth == "True" %}"fastapi-user-auth>=0.6.0"{% endif %}
    {% if cookiecutter.use_scheduler == "True" %}"fastapi-scheduler>=0.0.6,<0.1.0"{% endif %}
]

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pip>=22.2.2",
    "pre-commit>=2.20.0",
    "pytest>=7.2.0",
    "pytest-asyncio>=0.19.0",
    "uvicorn>=0.18.3",
]

[tool.pdm.scripts]
#_.env_file = "./backend/.env"
run = "faa run"
stop = "faa stop"
lint = "pre-commit run --all-files"
test = "pytest"

[tool.black]
line-length = 130
include = '\.pyi?$'

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "E711", # comparison to None should be 'if cond is None:';sqlalchemy is not support.
    "E712", # comparison to True should be 'if cond is True:' or 'if cond:'
]
# Same as Black.
line-length = 130

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
    "test_*",
    "*_test"
]
# pytest-asyncio
asyncio_mode = "auto"